feat: add page layout and mock routing

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,9 +9,9 @@
 	"endOfLine": "lf",
 	"importOrder": [
 		"<THIRD_PARTY_MODULES>",
-		"^@/assets/(.*)$",
-		"^@/modules/(.*)$",
-		"^@/test/(.*)$",
+		"^@assets/(.*)$",
+		"^@modules/(.*)$",
+		"^@test/(.*)$",
 		"^[./]"
 	],
 	"importOrderSeparation": true,
