--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@mantine/core": "^6.0.8",
+		"@mantine/hooks": "^6.0.8",
+		"@tabler/icons-react": "^2.17.0",
+		"@tanstack/react-query": "^4.29.3",
+		"@tanstack/react-query-devtools": "^4.29.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.10.0",
 		"vite-tsconfig-paths": "^4.2.0"
 	},
 	"devDependencies": {
