--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 		"@emotion/react": "^11.10.6",
 		"@mantine/core": "^6.0.8",
 		"@mantine/hooks": "^6.0.8",
-		"@tabler/icons-react": "^2.17.0",
 		"@tanstack/react-query": "^4.29.3",
 		"@tanstack/react-query-devtools": "^4.29.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.10.0",
+		"vite-plugin-svgr": "^2.4.0",
 		"vite-tsconfig-paths": "^4.2.0"
 	},
 	"devDependencies": {
