--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tanstack/react-query-devtools": "^4.29.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
 		"react-router-dom": "^6.10.0",
 		"vite-plugin-svgr": "^2.4.0",
 		"vite-tsconfig-paths": "^4.2.0"
@@ -29,6 +30,7 @@
 		"@types/node": "^18.16.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-helmet": "^6.1.6",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
