--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mantine/hooks": "^6.0.8",
 		"@tanstack/react-query": "^4.29.3",
 		"@tanstack/react-query-devtools": "^4.29.3",
+		"axios": "^1.3.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
