--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@emotion/react": "^11.10.6",
+		"@hookform/resolvers": "^3.1.0",
 		"@mantine/core": "^6.0.8",
 		"@mantine/hooks": "^6.0.8",
 		"@tanstack/react-query": "^4.29.3",
@@ -22,9 +23,11 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
+		"react-hook-form": "^7.43.9",
 		"react-router-dom": "^6.10.0",
 		"vite-plugin-svgr": "^2.4.0",
-		"vite-tsconfig-paths": "^4.2.0"
+		"vite-tsconfig-paths": "^4.2.0",
+		"yup": "^1.1.1"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
